Updating dependencies pom.xml. Switching to JDK version 21, Spring Boot 3, Spring Security 6